// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base preset: Base preset 1`] = `
Object {
  "globals": Object {
    "FormData": "readonly",
    "__DEV__": "readonly",
    "global": "readonly",
    "globalThis": "readonly",
  },
  "overrides": Array [
    Object {
      "files": Array [
        "**/__generated__/*.graphql.js",
      ],
      "rules": Object {
        "eslint-comments/no-unlimited-disable": 0,
      },
    },
  ],
  "plugins": Array [
    "eslint-plugin-import",
    "eslint-plugin-monorepo",
    "eslint-plugin-n",
    "eslint-plugin-eslint-comments",
    "eslint-plugin-promise",
    "eslint-plugin-adeira",
    "eslint-plugin-sx",
    "eslint-plugin-prettier",
  ],
  "rules": Object {
    "accessor-pairs": Array [
      1,
      Object {
        "setWithoutGet": true,
      },
    ],
    "adeira/graphql-require-object-description": 1,
    "adeira/no-duplicate-import-type-import": 2,
    "adeira/no-invalid-flow-annotations": 2,
    "adeira/only-nullable-fields": 2,
    "adeira/valid-test-folder": 2,
    "array-callback-return": 2,
    "arrow-body-style": 0,
    "block-scoped-var": 0,
    "callback-return": 0,
    "camelcase": Array [
      2,
      Object {
        "ignoreDestructuring": false,
        "properties": "never",
      },
    ],
    "capitalized-comments": 0,
    "class-methods-use-this": 0,
    "complexity": 0,
    "consistent-return": Array [
      2,
      Object {
        "treatUndefinedAsUnspecified": false,
      },
    ],
    "consistent-this": 0,
    "constructor-super": 2,
    "curly": Array [
      2,
      "all",
    ],
    "default-case": 0,
    "default-case-last": 2,
    "default-param-last": 2,
    "dot-notation": 2,
    "eqeqeq": Array [
      2,
      "smart",
    ],
    "eslint-comments/disable-enable-pair": 0,
    "eslint-comments/no-aggregating-enable": 0,
    "eslint-comments/no-duplicate-disable": 2,
    "eslint-comments/no-restricted-disable": 0,
    "eslint-comments/no-unlimited-disable": 2,
    "eslint-comments/no-unused-disable": 0,
    "eslint-comments/no-unused-enable": 2,
    "eslint-comments/no-use": 0,
    "eslint-comments/require-description": 0,
    "for-direction": 2,
    "func-name-matching": 0,
    "func-names": 0,
    "func-style": 0,
    "getter-return": 2,
    "global-require": 0,
    "grouped-accessor-pairs": 0,
    "guard-for-in": 2,
    "handle-callback-err": 1,
    "id-denylist": 0,
    "id-length": 0,
    "id-match": 0,
    "import/default": 0,
    "import/dynamic-import-chunkname": 0,
    "import/export": 2,
    "import/exports-last": 0,
    "import/extensions": Array [
      2,
      "never",
      Object {
        "json": "always",
      },
    ],
    "import/first": 2,
    "import/group-exports": 0,
    "import/imports-first": 0,
    "import/max-dependencies": 0,
    "import/named": 0,
    "import/namespace": 0,
    "import/newline-after-import": 2,
    "import/no-absolute-path": 2,
    "import/no-amd": 2,
    "import/no-anonymous-default-export": Array [
      2,
      Object {
        "allowAnonymousClass": false,
        "allowAnonymousFunction": false,
        "allowArray": true,
        "allowArrowFunction": false,
        "allowCallExpression": true,
        "allowLiteral": true,
        "allowObject": true,
      },
    ],
    "import/no-commonjs": 0,
    "import/no-cycle": 1,
    "import/no-default-export": 0,
    "import/no-deprecated": 0,
    "import/no-duplicates": 2,
    "import/no-dynamic-require": 0,
    "import/no-extraneous-dependencies": Array [
      2,
      Object {
        "devDependencies": Array [
          "**/*.spec.js",
          "**/*.stories.js",
          "**/*.test.js",
          "**/.storybook/**",
          "**/__flowtests__/**",
          "**/__tests__/**",
          "**/metro.config.js",
          "**/webpack.config.js",
        ],
      },
    ],
    "import/no-import-module-exports": 0,
    "import/no-internal-modules": 0,
    "import/no-mutable-exports": 2,
    "import/no-named-as-default": 0,
    "import/no-named-as-default-member": 0,
    "import/no-named-default": 2,
    "import/no-named-export": 0,
    "import/no-namespace": 0,
    "import/no-nodejs-modules": 0,
    "import/no-relative-packages": 2,
    "import/no-relative-parent-imports": 0,
    "import/no-restricted-paths": 0,
    "import/no-self-import": 2,
    "import/no-unassigned-import": 0,
    "import/no-unresolved": Array [
      2,
      Object {
        "ignore": Array [
          "^__generated__/",
        ],
      },
    ],
    "import/no-unused-modules": 0,
    "import/no-useless-path-segments": 2,
    "import/no-webpack-loader-syntax": 2,
    "import/order": Array [
      2,
      Object {
        "groups": Array [
          Array [
            "builtin",
            "external",
          ],
          Array [
            "parent",
            "sibling",
          ],
          "index",
        ],
        "newlines-between": "always",
      },
    ],
    "import/prefer-default-export": 0,
    "import/unambiguous": 0,
    "init-declarations": 0,
    "line-comment-position": 0,
    "lines-between-class-members": Array [
      1,
      "always",
      Object {
        "exceptAfterSingleLine": true,
      },
    ],
    "max-classes-per-file": 0,
    "max-depth": 0,
    "max-lines": 0,
    "max-lines-per-function": 0,
    "max-nested-callbacks": 0,
    "max-params": 0,
    "max-statements": 0,
    "max-statements-per-line": 0,
    "monorepo/no-internal-import": 2,
    "monorepo/no-relative-import": 2,
    "multiline-comment-style": 0,
    "n/callback-return": 0,
    "n/exports-style": 0,
    "n/file-extension-in-import": Array [
      2,
      "always",
      Object {
        ".js": "never",
      },
    ],
    "n/global-require": 0,
    "n/handle-callback-err": 1,
    "n/no-callback-literal": 2,
    "n/no-deprecated-api": 2,
    "n/no-exports-assign": 2,
    "n/no-extraneous-import": 0,
    "n/no-extraneous-require": 0,
    "n/no-missing-import": 0,
    "n/no-missing-require": 2,
    "n/no-mixed-requires": 0,
    "n/no-new-require": 1,
    "n/no-path-concat": 1,
    "n/no-process-env": 0,
    "n/no-process-exit": 0,
    "n/no-restricted-import": 0,
    "n/no-restricted-require": 0,
    "n/no-sync": 0,
    "n/no-unpublished-bin": 2,
    "n/no-unpublished-import": 0,
    "n/no-unpublished-require": 0,
    "n/no-unsupported-features/es-builtins": 0,
    "n/no-unsupported-features/es-syntax": 0,
    "n/no-unsupported-features/node-builtins": 0,
    "n/prefer-global/buffer": 2,
    "n/prefer-global/console": 2,
    "n/prefer-global/process": 2,
    "n/prefer-global/text-decoder": 0,
    "n/prefer-global/text-encoder": 0,
    "n/prefer-global/url": 2,
    "n/prefer-global/url-search-params": 0,
    "n/prefer-promises/dns": 0,
    "n/prefer-promises/fs": 0,
    "n/process-exit-as-throw": 2,
    "n/shebang": 2,
    "new-cap": Array [
      1,
      Object {
        "capIsNew": false,
        "newIsCap": true,
      },
    ],
    "no-alert": 1,
    "no-array-constructor": 1,
    "no-async-promise-executor": 2,
    "no-await-in-loop": 1,
    "no-bitwise": 2,
    "no-buffer-constructor": 1,
    "no-caller": 2,
    "no-case-declarations": 2,
    "no-class-assign": 1,
    "no-compare-neg-zero": 2,
    "no-cond-assign": 2,
    "no-console": 2,
    "no-const-assign": 2,
    "no-constant-condition": Array [
      2,
      Object {
        "checkLoops": false,
      },
    ],
    "no-constructor-return": 2,
    "no-continue": 0,
    "no-control-regex": 2,
    "no-debugger": 2,
    "no-delete-var": 2,
    "no-div-regex": 1,
    "no-dupe-args": 2,
    "no-dupe-class-members": 2,
    "no-dupe-else-if": 2,
    "no-dupe-keys": 2,
    "no-duplicate-case": 2,
    "no-duplicate-imports": 0,
    "no-else-return": 2,
    "no-empty": Array [
      1,
      Object {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": 2,
    "no-empty-function": 0,
    "no-empty-pattern": 2,
    "no-eq-null": 0,
    "no-eval": 2,
    "no-ex-assign": 2,
    "no-extend-native": 1,
    "no-extra-bind": 1,
    "no-extra-boolean-cast": 2,
    "no-extra-label": 2,
    "no-fallthrough": 2,
    "no-func-assign": 2,
    "no-global-assign": Array [
      2,
      Object {
        "exceptions": Array [
          "Map",
          "Set",
        ],
      },
    ],
    "no-implicit-coercion": Array [
      2,
      Object {
        "allow": Array [
          "!!",
        ],
      },
    ],
    "no-implicit-globals": 0,
    "no-implied-eval": 2,
    "no-import-assign": 2,
    "no-inline-comments": 0,
    "no-inner-declarations": 0,
    "no-invalid-regexp": 2,
    "no-invalid-this": 0,
    "no-irregular-whitespace": 2,
    "no-iterator": 2,
    "no-label-var": 2,
    "no-labels": Array [
      2,
      Object {
        "allowLoop": true,
        "allowSwitch": true,
      },
    ],
    "no-lone-blocks": 2,
    "no-lonely-if": 2,
    "no-loop-func": 2,
    "no-loss-of-precision": 2,
    "no-magic-numbers": 0,
    "no-misleading-character-class": 2,
    "no-mixed-requires": 0,
    "no-multi-assign": 2,
    "no-multi-str": 2,
    "no-negated-condition": 0,
    "no-nested-ternary": 2,
    "no-new": 1,
    "no-new-func": 2,
    "no-new-object": 1,
    "no-new-require": 1,
    "no-new-symbol": 1,
    "no-new-wrappers": 1,
    "no-nonoctal-decimal-escape": 2,
    "no-obj-calls": 2,
    "no-octal": 2,
    "no-octal-escape": 2,
    "no-param-reassign": 2,
    "no-path-concat": 1,
    "no-plusplus": 0,
    "no-process-env": 0,
    "no-process-exit": 0,
    "no-promise-executor-return": 2,
    "no-proto": 2,
    "no-prototype-builtins": 2,
    "no-redeclare": Array [
      2,
      Object {
        "builtinGlobals": true,
      },
    ],
    "no-regex-spaces": 2,
    "no-restricted-exports": 0,
    "no-restricted-globals": 0,
    "no-restricted-imports": 0,
    "no-restricted-modules": 0,
    "no-restricted-properties": 0,
    "no-restricted-syntax": 0,
    "no-return-assign": 1,
    "no-return-await": 1,
    "no-script-url": 2,
    "no-self-assign": 1,
    "no-self-compare": 1,
    "no-sequences": 1,
    "no-setter-return": 2,
    "no-shadow": 0,
    "no-shadow-restricted-names": 2,
    "no-sparse-arrays": 2,
    "no-sync": 0,
    "no-template-curly-in-string": 2,
    "no-ternary": 0,
    "no-this-before-super": 2,
    "no-throw-literal": 1,
    "no-undef": 2,
    "no-undef-init": 2,
    "no-undefined": 0,
    "no-underscore-dangle": 0,
    "no-unmodified-loop-condition": 0,
    "no-unneeded-ternary": 1,
    "no-unreachable": 2,
    "no-unreachable-loop": 2,
    "no-unsafe-finally": 2,
    "no-unsafe-negation": 2,
    "no-unsafe-optional-chaining": 2,
    "no-unused-expressions": 0,
    "no-unused-labels": 1,
    "no-unused-private-class-members": 2,
    "no-unused-vars": Array [
      2,
      Object {
        "args": "after-used",
        "argsIgnorePattern": "^_$",
        "ignoreRestSiblings": true,
        "varsIgnorePattern": "^fbt$",
      },
    ],
    "no-use-before-define": 0,
    "no-useless-backreference": 2,
    "no-useless-call": 1,
    "no-useless-catch": 2,
    "no-useless-computed-key": 0,
    "no-useless-concat": 2,
    "no-useless-constructor": 2,
    "no-useless-escape": 2,
    "no-useless-rename": 1,
    "no-useless-return": 1,
    "no-var": 2,
    "no-void": 1,
    "no-warning-comments": 0,
    "no-with": 2,
    "object-shorthand": 0,
    "one-var": Array [
      1,
      Object {
        "initialized": "never",
      },
    ],
    "operator-assignment": 1,
    "padding-line-between-statements": 0,
    "prefer-arrow-callback": 0,
    "prefer-const": Array [
      2,
      Object {
        "destructuring": "all",
      },
    ],
    "prefer-destructuring": 0,
    "prefer-exponentiation-operator": 2,
    "prefer-named-capture-group": 2,
    "prefer-numeric-literals": 0,
    "prefer-object-has-own": 0,
    "prefer-object-spread": 2,
    "prefer-promise-reject-errors": 1,
    "prefer-regex-literals": 2,
    "prefer-rest-params": 1,
    "prefer-spread": 1,
    "prefer-template": 2,
    "prettier/prettier": Array [
      2,
      Object {
        "bracketSpacing": true,
        "printWidth": 100,
        "quoteProps": "consistent",
        "singleQuote": true,
        "tabWidth": 2,
        "trailingComma": "all",
      },
    ],
    "promise/always-return": 0,
    "promise/avoid-new": 0,
    "promise/catch-or-return": 0,
    "promise/no-callback-in-promise": 0,
    "promise/no-native": 0,
    "promise/no-nesting": 1,
    "promise/no-new-statics": 2,
    "promise/no-promise-in-callback": 0,
    "promise/no-return-in-finally": 0,
    "promise/no-return-wrap": 2,
    "promise/param-names": 2,
    "promise/prefer-await-to-callbacks": 0,
    "promise/prefer-await-to-then": 0,
    "promise/valid-params": 2,
    "radix": 2,
    "require-atomic-updates": 2,
    "require-await": 2,
    "require-jsdoc": 0,
    "require-unicode-regexp": 0,
    "require-yield": 2,
    "sort-imports": 0,
    "sort-keys": 0,
    "sort-vars": 0,
    "spaced-comment": Array [
      2,
      "always",
      Object {
        "block": Object {
          "balanced": true,
          "markers": Array [
            ":",
            "::",
          ],
        },
      },
    ],
    "strict": 1,
    "sx/no-concatenated-classes": 2,
    "sx/no-unused-stylesheet": 2,
    "sx/use-logical-properties": 2,
    "sx/valid-usage": 2,
    "symbol-description": 2,
    "use-isnan": Array [
      2,
      Object {
        "enforceForSwitchCase": true,
      },
    ],
    "valid-jsdoc": 0,
    "valid-typeof": 2,
    "vars-on-top": 2,
    "yoda": 2,
  },
  "settings": Object {
    "import/resolver": Object {
      "node": Object {
        "extensions": Array [
          ".js",
          ".jsx",
          ".android.js",
          ".ios.js",
          ".native.js",
          ".web.js",
        ],
      },
    },
  },
}
`;

exports[`FBT preset: FBT preset 1`] = `
Object {
  "globals": Object {
    "FormData": "readonly",
    "__DEV__": "readonly",
    "global": "readonly",
    "globalThis": "readonly",
  },
  "overrides": Array [],
  "plugins": Array [
    "eslint-plugin-fbt",
    "eslint-plugin-prettier",
  ],
  "rules": Object {
    "curly": Array [
      2,
      "all",
    ],
    "fbt/no-empty-strings": 1,
    "fbt/no-unwrapped-strings": 0,
    "prettier/prettier": Array [
      2,
      Object {
        "bracketSpacing": true,
        "printWidth": 100,
        "quoteProps": "consistent",
        "singleQuote": true,
        "tabWidth": 2,
        "trailingComma": "all",
      },
    ],
  },
  "settings": Object {},
}
`;

exports[`Flowtype preset: Flowtype preset 1`] = `
Object {
  "globals": Object {
    "FormData": "readonly",
    "__DEV__": "readonly",
    "global": "readonly",
    "globalThis": "readonly",
  },
  "overrides": Array [],
  "plugins": Array [
    "eslint-plugin-ft-flow",
    "eslint-plugin-fb-flow",
    "eslint-plugin-prettier",
  ],
  "rules": Object {
    "curly": Array [
      2,
      "all",
    ],
    "fb-flow/flow-enums-default-if-possible": 2,
    "fb-flow/no-flow-enums-object-mapping": 2,
    "fb-flow/use-exact-by-default-object-type": 2,
    "fb-flow/use-flow-enums": 2,
    "fb-flow/use-indexed-access-type": 2,
    "ft-flow/array-style-complex-type": 0,
    "ft-flow/array-style-simple-type": 0,
    "ft-flow/arrow-parens": 0,
    "ft-flow/boolean-style": Array [
      1,
      "boolean",
    ],
    "ft-flow/define-flow-type": 1,
    "ft-flow/delimiter-dangle": 0,
    "ft-flow/enforce-line-break": 0,
    "ft-flow/enforce-suppression-code": 2,
    "ft-flow/generic-spacing": 0,
    "ft-flow/interface-id-match": 0,
    "ft-flow/newline-after-flow-annotation": Array [
      2,
      "always",
    ],
    "ft-flow/no-dupe-keys": 2,
    "ft-flow/no-duplicate-type-union-intersection-members": 2,
    "ft-flow/no-existential-type": 2,
    "ft-flow/no-flow-fix-me-comments": 0,
    "ft-flow/no-flow-suppressions-in-strict-files": 0,
    "ft-flow/no-internal-flow-type": 2,
    "ft-flow/no-mixed": 0,
    "ft-flow/no-mutable-array": 0,
    "ft-flow/no-primitive-constructor-types": 1,
    "ft-flow/no-types-missing-file-annotation": 2,
    "ft-flow/no-unused-expressions": Array [
      2,
      Object {
        "allowTaggedTemplates": true,
      },
    ],
    "ft-flow/no-weak-types": Array [
      2,
      Object {
        "Function": true,
        "Object": true,
        "any": false,
      },
    ],
    "ft-flow/object-type-curly-spacing": 0,
    "ft-flow/object-type-delimiter": 0,
    "ft-flow/quotes": 0,
    "ft-flow/require-compound-type-alias": 0,
    "ft-flow/require-exact-type": 0,
    "ft-flow/require-indexer-name": 0,
    "ft-flow/require-inexact-type": 0,
    "ft-flow/require-parameter-type": 0,
    "ft-flow/require-readonly-react-props": Array [
      2,
      Object {
        "useImplicitExactTypes": true,
      },
    ],
    "ft-flow/require-return-type": 0,
    "ft-flow/require-types-at-top": 0,
    "ft-flow/require-valid-file-annotation": Array [
      2,
      "always",
    ],
    "ft-flow/require-variable-type": 0,
    "ft-flow/semi": 0,
    "ft-flow/sort-keys": 0,
    "ft-flow/sort-type-union-intersection-members": 0,
    "ft-flow/space-after-type-colon": 0,
    "ft-flow/space-before-generic-bracket": 0,
    "ft-flow/space-before-type-colon": 0,
    "ft-flow/spread-exact-type": 0,
    "ft-flow/type-id-match": 0,
    "ft-flow/type-import-style": 0,
    "ft-flow/union-intersection-spacing": 0,
    "ft-flow/use-flow-type": 1,
    "ft-flow/use-read-only-spread": 2,
    "ft-flow/valid-syntax": 0,
    "prettier/prettier": Array [
      2,
      Object {
        "bracketSpacing": true,
        "printWidth": 100,
        "quoteProps": "consistent",
        "singleQuote": true,
        "tabWidth": 2,
        "trailingComma": "all",
      },
    ],
  },
  "settings": Object {},
}
`;

exports[`Jest preset: Jest preset 1`] = `
Object {
  "globals": Object {
    "FormData": "readonly",
    "__DEV__": "readonly",
    "global": "readonly",
    "globalThis": "readonly",
  },
  "overrides": Array [],
  "plugins": Array [
    "eslint-plugin-jest",
    "eslint-plugin-prettier",
  ],
  "rules": Object {
    "curly": Array [
      2,
      "all",
    ],
    "jest/consistent-test-it": 0,
    "jest/expect-expect": 0,
    "jest/max-nested-describe": Array [
      2,
      Object {
        "max": 5,
      },
    ],
    "jest/no-alias-methods": 1,
    "jest/no-commented-out-tests": 0,
    "jest/no-conditional-expect": 0,
    "jest/no-conditional-in-test": 0,
    "jest/no-deprecated-functions": 2,
    "jest/no-disabled-tests": 2,
    "jest/no-done-callback": 0,
    "jest/no-duplicate-hooks": 2,
    "jest/no-export": 2,
    "jest/no-focused-tests": 2,
    "jest/no-hooks": 0,
    "jest/no-identical-title": 2,
    "jest/no-interpolation-in-snapshots": 2,
    "jest/no-jasmine-globals": 2,
    "jest/no-jest-import": 2,
    "jest/no-large-snapshots": 0,
    "jest/no-mocks-import": 2,
    "jest/no-restricted-matchers": 0,
    "jest/no-standalone-expect": 2,
    "jest/no-test-callback": 0,
    "jest/no-test-prefixes": 0,
    "jest/no-test-return-statement": 2,
    "jest/prefer-called-with": 2,
    "jest/prefer-comparison-matcher": 1,
    "jest/prefer-equality-matcher": 1,
    "jest/prefer-expect-assertions": 0,
    "jest/prefer-expect-resolves": 2,
    "jest/prefer-hooks-on-top": 2,
    "jest/prefer-lowercase-title": 0,
    "jest/prefer-snapshot-hint": 0,
    "jest/prefer-spy-on": 0,
    "jest/prefer-strict-equal": 0,
    "jest/prefer-to-be": 2,
    "jest/prefer-to-contain": 2,
    "jest/prefer-to-have-length": 2,
    "jest/prefer-todo": 2,
    "jest/require-hook": 0,
    "jest/require-to-throw-message": 0,
    "jest/require-top-level-describe": 0,
    "jest/unbound-method": 0,
    "jest/valid-describe-callback": 2,
    "jest/valid-expect": 2,
    "jest/valid-expect-in-promise": 2,
    "jest/valid-title": 2,
    "prettier/prettier": Array [
      2,
      Object {
        "bracketSpacing": true,
        "printWidth": 100,
        "quoteProps": "consistent",
        "singleQuote": true,
        "tabWidth": 2,
        "trailingComma": "all",
      },
    ],
  },
  "settings": Object {},
}
`;

exports[`Next preset: Next preset 1`] = `
Object {
  "globals": Object {
    "FormData": "readonly",
    "__DEV__": "readonly",
    "global": "readonly",
    "globalThis": "readonly",
  },
  "overrides": Array [],
  "plugins": Array [
    "@next/eslint-plugin-next",
    "eslint-plugin-prettier",
  ],
  "rules": Object {
    "@next/next/google-font-display": 2,
    "@next/next/google-font-preconnect": 2,
    "@next/next/inline-script-id": 2,
    "@next/next/link-passhref": 2,
    "@next/next/next-script-for-ga": 0,
    "@next/next/no-css-tags": 2,
    "@next/next/no-document-import-in-page": 2,
    "@next/next/no-duplicate-head": 2,
    "@next/next/no-head-element": 1,
    "@next/next/no-head-import-in-document": 2,
    "@next/next/no-html-link-for-pages": 2,
    "@next/next/no-img-element": 2,
    "@next/next/no-page-custom-font": 2,
    "@next/next/no-script-component-in-head": 2,
    "@next/next/no-script-in-document": 2,
    "@next/next/no-server-import-in-page": 2,
    "@next/next/no-sync-scripts": 2,
    "@next/next/no-title-in-document-head": 2,
    "@next/next/no-typos": 2,
    "@next/next/no-unwanted-polyfillio": 2,
    "curly": Array [
      2,
      "all",
    ],
    "prettier/prettier": Array [
      2,
      Object {
        "bracketSpacing": true,
        "printWidth": 100,
        "quoteProps": "consistent",
        "singleQuote": true,
        "tabWidth": 2,
        "trailingComma": "all",
      },
    ],
  },
  "settings": Object {},
}
`;

exports[`React preset: React preset 1`] = `
Object {
  "globals": Object {
    "FormData": "readonly",
    "__DEV__": "readonly",
    "global": "readonly",
    "globalThis": "readonly",
  },
  "overrides": Array [
    Object {
      "files": Array [
        "**/__tests__/**/*.[jt]s?(x)",
        "**/?(*.)+(spec|test).[jt]s?(x)",
      ],
      "rules": Object {
        "jest-dom/prefer-checked": 1,
        "jest-dom/prefer-empty": 1,
        "jest-dom/prefer-enabled-disabled": 1,
        "jest-dom/prefer-focus": 1,
        "jest-dom/prefer-in-document": 1,
        "jest-dom/prefer-required": 1,
        "jest-dom/prefer-to-have-attribute": 1,
        "jest-dom/prefer-to-have-class": 1,
        "jest-dom/prefer-to-have-style": 1,
        "jest-dom/prefer-to-have-text-content": 1,
        "jest-dom/prefer-to-have-value": 1,
        "testing-library/await-async-query": 0,
        "testing-library/await-async-utils": 2,
        "testing-library/await-fire-event": 0,
        "testing-library/consistent-data-testid": 0,
        "testing-library/no-await-sync-events": 2,
        "testing-library/no-await-sync-query": 2,
        "testing-library/no-container": 0,
        "testing-library/no-debugging-utils": 2,
        "testing-library/no-dom-import": Array [
          2,
          "react",
        ],
        "testing-library/no-global-regexp-flag-in-query": 1,
        "testing-library/no-manual-cleanup": 0,
        "testing-library/no-node-access": 0,
        "testing-library/no-promise-in-fire-event": 2,
        "testing-library/no-render-in-setup": 0,
        "testing-library/no-unnecessary-act": 2,
        "testing-library/no-wait-for-empty-callback": 2,
        "testing-library/no-wait-for-multiple-assertions": 2,
        "testing-library/no-wait-for-side-effects": 2,
        "testing-library/no-wait-for-snapshot": 2,
        "testing-library/prefer-explicit-assert": 2,
        "testing-library/prefer-find-by": 2,
        "testing-library/prefer-presence-queries": 2,
        "testing-library/prefer-query-by-disappearance": 2,
        "testing-library/prefer-screen-queries": 0,
        "testing-library/prefer-user-event": 2,
        "testing-library/prefer-wait-for": 2,
        "testing-library/render-result-naming-convention": 0,
      },
    },
  ],
  "plugins": Array [
    "eslint-plugin-react",
    "eslint-plugin-react-hooks",
    "eslint-plugin-react-native",
    "eslint-plugin-jsx-a11y",
    "eslint-plugin-jest-dom",
    "eslint-plugin-testing-library",
    "eslint-plugin-prettier",
  ],
  "rules": Object {
    "curly": Array [
      2,
      "all",
    ],
    "jsx-a11y/alt-text": 2,
    "jsx-a11y/anchor-has-content": 2,
    "jsx-a11y/anchor-is-valid": 2,
    "jsx-a11y/aria-activedescendant-has-tabindex": 0,
    "jsx-a11y/aria-props": 2,
    "jsx-a11y/aria-proptypes": 2,
    "jsx-a11y/aria-role": 2,
    "jsx-a11y/aria-unsupported-elements": 2,
    "jsx-a11y/autocomplete-valid": 2,
    "jsx-a11y/click-events-have-key-events": 0,
    "jsx-a11y/control-has-associated-label": 0,
    "jsx-a11y/heading-has-content": 2,
    "jsx-a11y/html-has-lang": 2,
    "jsx-a11y/iframe-has-title": 2,
    "jsx-a11y/img-redundant-alt": 0,
    "jsx-a11y/interactive-supports-focus": 2,
    "jsx-a11y/label-has-associated-control": 0,
    "jsx-a11y/lang": 2,
    "jsx-a11y/media-has-caption": 0,
    "jsx-a11y/mouse-events-have-key-events": 0,
    "jsx-a11y/no-access-key": 2,
    "jsx-a11y/no-autofocus": Array [
      2,
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/no-distracting-elements": Array [
      2,
      Object {
        "elements": Array [
          "marquee",
          "blink",
        ],
      },
    ],
    "jsx-a11y/no-interactive-element-to-noninteractive-role": 0,
    "jsx-a11y/no-noninteractive-element-interactions": 0,
    "jsx-a11y/no-noninteractive-element-to-interactive-role": 0,
    "jsx-a11y/no-noninteractive-tabindex": 2,
    "jsx-a11y/no-redundant-roles": 2,
    "jsx-a11y/no-static-element-interactions": 0,
    "jsx-a11y/role-has-required-aria-props": 2,
    "jsx-a11y/role-supports-aria-props": 2,
    "jsx-a11y/scope": 2,
    "jsx-a11y/tabindex-no-positive": 2,
    "prettier/prettier": Array [
      2,
      Object {
        "bracketSpacing": true,
        "printWidth": 100,
        "quoteProps": "consistent",
        "singleQuote": true,
        "tabWidth": 2,
        "trailingComma": "all",
      },
    ],
    "react-hooks/exhaustive-deps": Array [
      2,
      Object {
        "additionalHooks": "useRecoilCallback",
      },
    ],
    "react-hooks/rules-of-hooks": 2,
    "react-native/no-color-literals": 0,
    "react-native/no-inline-styles": 0,
    "react-native/no-raw-text": 0,
    "react-native/no-single-element-style-arrays": 2,
    "react-native/no-unused-styles": 2,
    "react-native/sort-styles": 0,
    "react-native/split-platform-components": 0,
    "react/boolean-prop-naming": 0,
    "react/button-has-type": Array [
      2,
      Object {
        "button": true,
        "reset": false,
        "submit": true,
      },
    ],
    "react/default-props-match-prop-types": 0,
    "react/destructuring-assignment": 0,
    "react/display-name": 0,
    "react/forbid-component-props": 0,
    "react/forbid-dom-props": Array [
      2,
      Object {
        "forbid": Array [
          "class",
          "for",
        ],
      },
    ],
    "react/forbid-elements": 0,
    "react/forbid-foreign-prop-types": 0,
    "react/forbid-prop-types": 0,
    "react/function-component-definition": 0,
    "react/hook-use-state": 0,
    "react/iframe-missing-sandbox": 1,
    "react/jsx-boolean-value": 0,
    "react/jsx-curly-brace-presence": 0,
    "react/jsx-filename-extension": 0,
    "react/jsx-fragments": 0,
    "react/jsx-handler-names": 0,
    "react/jsx-key": Array [
      2,
      Object {
        "checkFragmentShorthand": true,
        "checkKeyMustBeforeSpread": true,
        "warnOnDuplicates": true,
      },
    ],
    "react/jsx-max-depth": 0,
    "react/jsx-no-bind": Array [
      2,
      Object {
        "allowArrowFunctions": true,
        "allowBind": false,
        "allowFunctions": false,
        "ignoreDOMComponents": true,
        "ignoreRefs": true,
      },
    ],
    "react/jsx-no-comment-textnodes": 2,
    "react/jsx-no-constructed-context-values": 2,
    "react/jsx-no-duplicate-props": 2,
    "react/jsx-no-literals": 0,
    "react/jsx-no-script-url": 2,
    "react/jsx-no-target-blank": 2,
    "react/jsx-no-undef": 2,
    "react/jsx-no-useless-fragment": 2,
    "react/jsx-pascal-case": 2,
    "react/jsx-props-no-spreading": 0,
    "react/jsx-sort-default-props": 0,
    "react/jsx-sort-props": 0,
    "react/jsx-uses-react": 1,
    "react/jsx-uses-vars": 2,
    "react/no-access-state-in-setstate": 2,
    "react/no-adjacent-inline-elements": 0,
    "react/no-array-index-key": 0,
    "react/no-arrow-function-lifecycle": 2,
    "react/no-children-prop": 0,
    "react/no-danger": 0,
    "react/no-danger-with-children": 2,
    "react/no-deprecated": 2,
    "react/no-did-mount-set-state": 0,
    "react/no-did-update-set-state": 2,
    "react/no-direct-mutation-state": 2,
    "react/no-find-dom-node": 2,
    "react/no-invalid-html-attribute": 2,
    "react/no-is-mounted": 2,
    "react/no-multi-comp": Array [
      2,
      Object {
        "ignoreStateless": true,
      },
    ],
    "react/no-namespace": 0,
    "react/no-redundant-should-component-update": 2,
    "react/no-render-return-value": 2,
    "react/no-set-state": 0,
    "react/no-string-refs": 0,
    "react/no-this-in-sfc": 2,
    "react/no-typos": 0,
    "react/no-unescaped-entities": 2,
    "react/no-unknown-property": 2,
    "react/no-unsafe": 0,
    "react/no-unstable-nested-components": Array [
      2,
      Object {
        "allowAsProps": true,
      },
    ],
    "react/no-unused-class-component-methods": 2,
    "react/no-unused-prop-types": 0,
    "react/no-unused-state": 0,
    "react/no-will-update-set-state": 0,
    "react/prefer-es6-class": Array [
      2,
      "always",
    ],
    "react/prefer-exact-props": 0,
    "react/prefer-read-only-props": 0,
    "react/prefer-stateless-function": 0,
    "react/prop-types": 0,
    "react/react-in-jsx-scope": 0,
    "react/require-default-props": 0,
    "react/require-optimization": 0,
    "react/require-render-return": 2,
    "react/self-closing-comp": 2,
    "react/sort-comp": Array [
      2,
      Object {
        "groups": Object {
          "lifecycle": Array [
            "displayName",
            "propTypes",
            "contextTypes",
            "childContextTypes",
            "mixins",
            "statics",
            "defaultProps",
            "constructor",
            "getDefaultProps",
            "state",
            "getInitialState",
            "getChildContext",
            "getDerivedStateFromProps",
            "getDerivedStateFromError",
            "componentWillMount",
            "UNSAFE_componentWillMount",
            "componentDidMount",
            "componentWillReceiveProps",
            "UNSAFE_componentWillReceiveProps",
            "shouldComponentUpdate",
            "componentWillUpdate",
            "UNSAFE_componentWillUpdate",
            "getSnapshotBeforeUpdate",
            "componentDidUpdate",
            "componentDidCatch",
            "componentWillUnmount",
          ],
          "rendering": Array [
            "/^render.+$/",
            "render",
          ],
        },
        "order": Array [
          "type-annotations",
          "static-variables",
          "static-methods",
          "instance-variables",
          "lifecycle",
          "everything-else",
          "rendering",
        ],
      },
    ],
    "react/sort-prop-types": 0,
    "react/state-in-constructor": 0,
    "react/static-property-placement": 0,
    "react/style-prop-object": 2,
    "react/void-dom-elements-no-children": 2,
  },
  "settings": Object {
    "react": Object {
      "version": Any<String>,
    },
  },
}
`;

exports[`Relay preset: Relay preset 1`] = `
Object {
  "globals": Object {
    "FormData": "readonly",
    "__DEV__": "readonly",
    "global": "readonly",
    "globalThis": "readonly",
  },
  "overrides": Array [],
  "plugins": Array [
    "eslint-plugin-relay",
    "eslint-plugin-prettier",
  ],
  "rules": Object {
    "curly": Array [
      2,
      "all",
    ],
    "prettier/prettier": Array [
      2,
      Object {
        "bracketSpacing": true,
        "printWidth": 100,
        "quoteProps": "consistent",
        "singleQuote": true,
        "tabWidth": 2,
        "trailingComma": "all",
      },
    ],
    "relay/compat-uses-vars": 0,
    "relay/function-required-argument": 2,
    "relay/generated-flow-types": 2,
    "relay/graphql-naming": 0,
    "relay/graphql-syntax": 2,
    "relay/hook-required-argument": 2,
    "relay/must-colocate-fragment-spreads": 2,
    "relay/no-future-added-value": 2,
    "relay/unused-fields": 2,
  },
  "settings": Object {},
}
`;
